{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 136,
  "lineage": "2287e00e-043c-8241-b3b1-2d8bdc2f2f2b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b5297d565ef30a6",
            "arn": "arn:aws:ec2:ap-south-1:783903143167:instance/i-02d939d0be2022d2a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d939d0be2022d2a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0372b1b4440dafb4b",
            "private_dns": "ip-10-0-1-124.ap-south-1.compute.internal",
            "private_ip": "10.0.1.124",
            "public_dns": "ec2-3-7-55-149.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.55.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0892e365d5a791850",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09134a77db8bfbcdf",
            "tags": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c27922f747be3faf"
            ]
          },
          "dependencies": [
            "aws_security_group.terraformsecuritygroup",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myIGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ebe640408904bf1b",
            "owner_id": "783903143167",
            "tags": {
              "Name": "myIGW"
            },
            "vpc_id": "vpc-083bcd4c2d8ab9b48"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myrt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-098b6abdfa9f2af9d",
            "owner_id": "783903143167",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ebe640408904bf1b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myrt"
            },
            "vpc_id": "vpc-083bcd4c2d8ab9b48"
          },
          "dependencies": [
            "aws_internet_gateway.myIGW",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f3cd430f962b4d9",
            "route_table_id": "rtb-098b6abdfa9f2af9d",
            "subnet_id": "subnet-09134a77db8bfbcdf"
          },
          "dependencies": [
            "aws_internet_gateway.myIGW",
            "aws_route_table.myrt",
            "aws_subnet.subnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraformsecuritygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:783903143167:security-group/sg-0c27922f747be3faf",
            "description": "Allow 80 and 22 port traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c27922f747be3faf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow 80 port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200414194654423400000001",
            "name_prefix": null,
            "owner_id": "783903143167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_80 and 22 port"
            },
            "timeouts": null,
            "vpc_id": "vpc-083bcd4c2d8ab9b48"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:783903143167:subnet/subnet-09134a77db8bfbcdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09134a77db8bfbcdf",
            "map_public_ip_on_launch": true,
            "owner_id": "783903143167",
            "tags": {
              "Name": "subnet"
            },
            "vpc_id": "vpc-083bcd4c2d8ab9b48"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:783903143167:vpc/vpc-083bcd4c2d8ab9b48",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ccaae9c2560dcb2",
            "default_route_table_id": "rtb-0e0b832cc021b7889",
            "default_security_group_id": "sg-06c5f5950d6067f46",
            "dhcp_options_id": "dopt-ccdb35a7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-083bcd4c2d8ab9b48",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e0b832cc021b7889",
            "owner_id": "783903143167",
            "tags": {
              "Name": "terraformvpc"
            }
          }
        }
      ]
    }
  ]
}